repaired button alignment

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -24,7 +24,7 @@ body {
 	text-align: center;
 	width: 40px;
 	height: 40px;
-	margin: 3px;
+	margin: 5px;
 	background: #eff0f2;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
@@ -61,6 +61,24 @@ body {
 		0 0 3px #333;
 	border-top: 1px solid #eee;}
 
+.not_active {
+    color: #888;
+    background: #ebeced;
+    margin: 5px;
+    -webkit-box-shadow:
+      inset 0 0 25px #ddd,
+      0 0 3px #333;
+    -moz-box-shadow:
+      inset 0 0 25px #ddd,
+      0 0 3px #333;
+    box-shadow:
+      inset 0 0 25px #ddd,
+      0 0 3px #333;
+    border-top: 1px solid #eee;
+    pointer-events: none;
+    cursor: default;
+}
+
 #qwerty li a span {
 	display: block;
 	margin: 13px 0 0;
@@ -68,12 +86,13 @@ body {
 
 /* Titles */
 h1 {
-  text-shadow: 0 0 5px #dd9090, 0 0 10px #dd9090,
-             0 0 20px #dd9090, 0 0 30px #dd9090,
-             0 0 40px #dd9090;
+  text-shadow: 0 0 5px #ddd, 0 0 10px #ddd,
+             0 0 20px #ddd, 0 0 30px #ddd,
+             0 0 40px #ddd;
   font-family: "Raleway";
   font-weight: 100;
   font-size: 80px;
+  text-align: center;
   color: #ad2b2b;
 }
 h2, h3, h4, h5, h6 {
@@ -121,24 +140,6 @@ a:after {
     transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
-.not_active {
-  color: #888;
-  background: #ebeced;
-  margin: 7px 5px 3px;
-  -webkit-box-shadow:
-    inset 0 0 25px #ddd,
-    0 0 3px #333;
-  -moz-box-shadow:
-    inset 0 0 25px #ddd,
-    0 0 3px #333;
-  box-shadow:
-    inset 0 0 25px #ddd,
-    0 0 3px #333;
-  border-top: 1px solid #eee;
-  pointer-events: none;
-  cursor: default;
-}
-
 blockquote {
     display: block;
     margin-top: 1em;
@@ -152,7 +153,7 @@ blockquote {
    ========================================================================== */
 
 .Span {
-       display: inline-block;
+       display: inline-flex;
        min-width: 10px;
        /*border-style: outset;*/
    }
